--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,19 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.mami</groupId>
-  <artifactId>java-vtb-geekbrains</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.1.5.RELEASE</version>
+    <relativePath/> <!-- lookup parent from repository -->
+  </parent>
+
+  <groupId>com.mami</groupId>
+  <artifactId>geekbrains-vtb-hw14</artifactId>
+  <name>homework-14</name>
+  <description>Java Vtb GeekBrains HW 14</description>
+  <version>0.0.1-SNAPSHOT</version>
+
 
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
@@ -16,13 +26,22 @@
   <dependencies>
 
     <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
-      <version>5.8.2</version>
-      <scope>test</scope>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-thymeleaf</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-devtools</artifactId>
+      <scope>runtime</scope>
+      <optional>true</optional>
     </dependency>
 
   </dependencies>
-
 
 </project>
